--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/brucegroverlee/2cmind#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-js": "browserify -t [ babelify --presets [ es2015 ] ] src/frontend/js/bundle.js > _dist/public/js/bundle.js"
+    "build-js": "browserify -t [ babelify --presets [ es2015 ] ] src/frontend/js/bundle.js > _dist/public/js/bundle.js",
+    "engine": "babel-node src/backend/index.js --presets es2015",
+    "start": "gulp build-frontend && npm run engine"
   },
   "devDependencies": {
     "babelify": "^7.2.0",
@@ -32,6 +34,14 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.5.0",
-    "jquery": "^2.2.0"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "jquery": "^2.2.0",
+    "keygenerator": "^1.0.4",
+    "mongoose": "^4.4.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
