--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/brucegroverlee/2cmind#readme",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-babel": "babel ./src/backend/api/daemon/index.js --out-file ./src/backend/api/daemon/compiled.js --presets es2015",
+    "test": "tape test/*-test.js | tap-spec",
+    "babel-test": "npm run build-babel && npm test",
     "build-js": "browserify -t [ babelify --presets [ es2015 ] ] src/frontend/js/bundle.js > _dist/public/js/bundle.js",
     "engine": "babel-node src/backend/index.js --presets es2015",
     "serve": "npm run engine",
@@ -31,7 +33,9 @@
     "gulp": "^3.9.1",
     "gulp-shell": "^0.5.1",
     "gulp-stylus": "^2.2.0",
-    "gulp-webserver": "^0.9.1"
+    "gulp-webserver": "^0.9.1",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.4.0"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.5.0",
